07-opa-gatekeeper-admission/manifests/constraint-no-pod-without-netpol.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sNoPodWithoutNetpol
metadata:
  name: every-pod-namespace-needs-netpol
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces: ["prod"]
