07-opa-gatekeeper-admission/manifests/template-required-labels.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequiredlabels
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredLabels
      validation:
        openAPIV3Schema:
          type: object
          properties:
            labels:
              type: array
              items: { type: string }
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequiredlabels

        violation[{"msg": msg}] {
          required := input.parameters.labels
          provided := {k | input.review.object.metadata.labels[k]}
          missing := {x | x := required[_]; not provided[x]}
          count(missing) > 0
          msg := sprintf("missing required labels: %v", [missing])
        }
